<resources>
    <string name="message_sub_separator" translatable="false">" \@ "</string>
    <string name="version_prefix">"App version: "</string>
    <string name="menu_members">Search Members</string>
    <string name="menu_about">About &amp; Install</string>
    <string name="menu_app_notifications">App Notifications</string>
    <string name="menu_upload_photo">Upload Photo</string>
    <string name="menu_upload_video">Upload Video</string>
    <string name="menu_settings">Android Settings</string>
    <string name="menu_websettings">Update Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_events">Events</string>
    <string name="menu_updates">Check for updates</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_questions"><![CDATA[Q&A]]></string>
    <string name="menu_support">Support FetLife</string>
    <string name="menu_glossary">Glossary</string>
    <string name="menu_ads">Advertise on FetLife</string>
    <string name="menu_relnotes">Release Notes</string>
    <string name="menu_help">Help</string>
    <string name="menu_guidelines">Guidelines</string>
    <string name="menu_contact">Contact Us</string>
    <string name="nav_stuff_you_love">Stuff you Love</string>
    <string name="nav_fresh_and_pervy"><![CDATA[Fresh & Pervy]]></string>
    <string name="nav_kinky_and_popular"><![CDATA[Kinky & Popular]]></string>
    <string name="menu_team">Meet the Team</string>
    <string name="menu_wallpaper">Wallpapers</string>
    <string name="menu_places">Places</string>
</resources>