<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<group android:id="@+id/conversation" android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_conversations"-->
            <!--android:icon="@android:drawable/ic_menu_view"-->
            <!--android:title="@string/menu_conversations" />-->
    <!--</group>-->

    <group android:id="@+id/explore" android:checkableBehavior="single">

        <!--<item-->
            <!--android:id="@+id/nav_feed"-->
            <!--android:icon="@drawable/ic_list_black_24dp"-->
            <!--android:title="@string/menu_feed" />-->

        <item
            android:id="@+id/nav_kinky_and_popular"
            android:icon="@drawable/ic_view_day_black_24dp"
            android:iconTint="@color/side_menu_icon"
            android:title="@string/nav_kinky_and_popular" />

        <item
            android:id="@+id/nav_fresh_and_pervy"
            android:icon="@drawable/ic_view_day_black_24dp"
            android:iconTint="@color/side_menu_icon"
            android:title="@string/nav_fresh_and_pervy" />

        <item
            android:id="@+id/nav_stuff_you_love"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:iconTint="@color/side_menu_icon"
            android:title="@string/nav_stuff_you_love" />

    </group>
    <group android:id="@+id/navigation" android:checkableBehavior="single">

        <!--<item-->
            <!--android:id="@+id/nav_search"-->
            <!--android:icon="@android:drawable/ic_menu_search"-->
            <!--android:title="@string/menu_search" />-->

        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/menu_questions" />

        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_groups" />

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_room_black_24dp"
            android:title="@string/menu_events" />

        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/menu_places" />

        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_members" />

        <!--<item-->
            <!--android:id="@+id/nav_friendrequests"-->
            <!--android:icon="@android:drawable/ic_menu_my_calendar"-->
            <!--android:title="@string/menu_friendrequests" />-->

        <!--<item-->
            <!--android:id="@+id/nav_notifications"-->
            <!--android:icon="@android:drawable/ic_dialog_alert"-->
            <!--android:title="@string/menu_notifications" />-->

        <item
            android:id="@+id/nav_app_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_app_notifications" />

    </group>

    <group android:id="@+id/interaction" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upload_pic"
            android:icon="@drawable/ic_photo_black_24dp"
            android:title="@string/menu_upload_photo" />

        <item
            android:id="@+id/nav_upload_video"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_upload_video" />

        <!--<item-->
            <!--android:id="@+id/nav_introduce"-->
            <!--android:icon="@android:drawable/ic_menu_share"-->
            <!--android:title="@string/menu_introduce" />-->

    </group>

    <group android:id="@+id/logout" android:checkableBehavior="single">

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/menu_support" />

        <item
            android:id="@+id/nav_updates"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/menu_updates" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_websettings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_websettings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_close_black_24dp"
            android:title="@string/menu_logout" />
    </group>

    <group
        android:id="@+id/about" android:checkableBehavior="single">

        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_glossary"
            android:title="@string/menu_glossary" />

        <item
            android:id="@+id/nav_wallpaper"
            android:title="@string/menu_wallpaper"/>

        <item
            android:id="@+id/nav_guidelines"
            android:title="@string/menu_guidelines" />

        <item
            android:id="@+id/nav_relnotes"
            android:title="@string/menu_relnotes" />

        <item
            android:id="@+id/nav_ads"
            android:title="@string/menu_ads" />

        <item
            android:id="@+id/nav_team"
            android:title="@string/menu_team" />

        <item
            android:id="@+id/nav_contact"
            android:title="@string/menu_contact" />

        <!--<item-->
        <!--android:id="@+id/nav_wallpapers"-->
        <!--android:icon="@android:drawable/ic_menu_gallery"-->
        <!--android:title="@string/menu_wallpapers" />-->

    </group>

</menu>
